--- a/UniChain/package.json
+++ b/UniChain/package.json
@@ -2,9 +2,9 @@
   "name": "notification-service",
   "version": "1.0.0",
   "main": "dist/server.js",
-  "engines": {
-    "node": "20.16.0"
-  },
+"engines": {
+  "node": "18.x"
+},
   "directories": {
     "test": "tests"
   },
