--- a/UniChain/package.json
+++ b/UniChain/package.json
@@ -5,6 +5,9 @@
   "directories": {
     "test": "tests"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node dist/api/index.js",
     "build": "tsc",
